# DaikinAssignment

./: AirConditioner.cpp  AirConditioner.h  AirConditionerEnum.h  CMakeLists.txt  Cooler.h  Heater.h  Radiator.cpp  Radiator.h  RadiatorEnum.h  Room.cpp  Room.h  TemperatureRegulator.cpp  TemperatureRegulator.h  TemperatureRegulatorEnum.cpp  TemperatureRegulatorEnum.h  ThermalExchangeEnum.h  main.cpp
AirConditioner/: AirConditioner.cpp  AirConditioner.h  AirConditionerEnum.h
DaikinAssignmentTest/: CMakeLists.txt  DaikinAssignmentTest.cpp  DaikinAssignmentTest.h
GoogleTest/: CMakeLists.txt  DaikinAssignmentTest.cpp  DaikinAssignmentTest.h
Radiator/: Radiator.cpp  Radiator.h  RadiatorEnum.h
Room/: Room.cpp  Room.h  ThermalExchangeEnum.h
TemperatureRegulator/: TemperatureRegulator.cpp  TemperatureRegulator.h
